formver.compiler-plugin/testData/diagnostics/conversion/nameing/predicate_method_shared_collision.kt
// NEVER_VALIDATE
// RENDER_PREDICATES

class A(val x: Int)

fun <!VIPER_TEXT!>shared<!>() {}

fun <!VIPER_TEXT!>predicateMethodSharedCollision<!>(a: A) {
    shared()
    a.x
}
